# ai_uk_bot1

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
data/: bot.sqlite-shm  bot.sqlite-wal
src/balt_dom_bot/: __main__.py  app.py  config.py  l10n.py  log.py  models.py
src/balt_dom_bot/gui/: app.py  auth.py  events.py
src/balt_dom_bot/gui/templates/: bans.html  base.html  chat_whitelist.html  complex_edit.html  complexes.html  (+6 more)
src/balt_dom_bot/handlers/: admin_commands.py  callbacks.py  lifecycle.py  manager_reply.py  messages.py  resident_commands.py  sender.py
src/balt_dom_bot/kb/: faq.py
src/balt_dom_bot/prompts/: chat_mode.py  classifier.py  completeness.py  responder.py  spam_checker.py
src/balt_dom_bot/services/: cache.py  chat_context.py  chat_responder.py  classifier.py  completeness_checker.py  cooldown.py  escalation.py  fragment_troll.py  moderator.py  pipeline.py  quota_manager.py  recent_reply_tracker.py  reply_formatter.py  responder.py  sanitizer.py  spam_detector.py  spam_llm_checker.py  yandex_gpt.py
src/balt_dom_bot/storage/: bans_repo.py  chat_mode_repo.py  complexes_repo.py  db.py  escalations.py  global_settings_repo.py  manager_reply_repo.py  message_log.py  prompts_repo.py  strikes_repo.py  users_repo.py
tests/: test_chat_mode_pipeline.py  test_clarification_followup.py  test_cooldown.py  test_fragment_troll.py  test_gui_smoke.py  test_incitement_detection.py  test_manager_reply_flow.py  test_pipeline_provocation.py  test_resident_commands.py  test_spam_detector.py  test_spam_llm_checker.py
